--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,10 @@
    <head>
       <meta charset = "UTF-8">
       <title>React App</title>
-      <link rel="stylesheet" href="style/style.css">
    </head>
    <body>
       <div id = "app"></div>
-      <script src = "dist/bundle.js"></script>
+      <script src="index.js"></script>
    </body>
 
 </html>
